Enhance ListingForm component with new features and validations. Added Radix UI components for improved user experience, including Select for category and BHK selection. Updated form handling to include image uploads and validation for multiple images. Modified schema to change price and deposit fields to numbers and added new fields for furnishing status and configuration. Updated package dependencies to include @radix-ui/react-select and @radix-ui/react-toast.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.5",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.71.1",
     "@tailwindcss/typography": "^0.5.16",
