--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sanity": "^3.71.1",
+    "slugify": "^1.6.6",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
